# yolov8-ncnn

./: README.md
kl_ncnn_yolov5/: CMakeLists.txt  README.md  delall.py  deldata.py  deldraw.py
kl_ncnn_yolov5/blob_opt/: parameter.xml
kl_ncnn_yolov5/creality/: AI_property.cpp  AI_property.h  CMakeLists.txt  best-ll.param  detection.cpp  gcode_cut.cpp  gcode_cut.h  yolo_attention.cpp  yolo_attention.h  yolov5.cpp  yolov5.h  yolov5n.param
kl_ncnn_yolov5/cxsw/: 1.py  CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  light.py  py_use_c.py  test.cpp
kl_ncnn_yolov5/examples/: CMakeLists.txt  triplemu-yolov8.cpp  yolov5 copy.cpp  yolov5.cpp  yolov5_pnnx.cpp  yolov8-obb.cpp  yolov8.cpp  yolov8.h
kl_ncnn_yolov5/model/: best.ncnn.param  cuo-531-1.param  cuo-531-2.param  cuo_v8.param  model8.param  v8-530-1.param  v8-531.param  v8_529.param  warp8-warp.param  yolov8n.ncnn.param  yolov8n.param
kl_ncnn_yolov5/src/: modelbin.cpp  net.cpp
kl_ncnn_yolov5/tools/pnnx/src/: main.cpp
kl_ncnn_yolov5/zyt/: test  test.cpp
ultralytics/: expt.py
ultralytics/runs/detect/train/: args.yaml  events.out.tfevents.1717127774.ecs-47c5.3888774.0  results.csv
ultralytics/ultralytics/cfg/datasets/: cuoceng.yaml
ultralytics/ultralytics/nn/modules/: block.py  head.py
ultralytics/ultralytics/runs/detect/train/: args.yaml  events.out.tfevents.1717064060.ecs-47c5.3786839.0  results.csv
